# NewMoveScan

./: .gitignore  Audit_benchmark.json  Cargo.toml  OpenSource_benchmark.json  README.md  build.sh  result.json
res/examples_mv/aptos/: DemoCoin.mv  access_control.mv  infinite_loop.mv  infinite_loop2.mv  overflow.mv  precision.mv  unchecked_return.mv  witness.mv  witness_user.mv
res/examples_mv/sui/: infinite_loop.mv  overflow.mv  precision_loss.mv  unchecked_return.mv  unnecessary_bool_judgment.mv  unused_constant.mv  unused_private_function.mv  witness.mv
src/: lib.rs  main.rs
src/cli/: parser.rs
src/detect/: detect1.rs  detect2.rs  detect21.rs  detect4.rs  detect6.rs  detect8.rs  mod.rs
src/move_ir/: bytecode_display.rs  control_flow_graph.rs  data_dependency.rs  fatloop.rs  generate_bytecode.rs  mod.rs  packages.rs  sbir_generator.rs  utils.rs
src/scanner/: detector.rs  detectors.rs  mod.rs  printer.rs  result.rs
src/scanner/detector/: detector1.rs  detector2.rs  mod.rs
src/scanner/detects/: detect1.rs  detect10.rs  detect11.rs  detect12.rs  detect13.rs  detect14.rs  detect15.rs  detect2.rs  detect3.rs  detect4.rs  detect5.rs  detect6.rs  detect7.rs  detect8.rs  detect9.rs  mod.rs
src/unit_tests/: mod.rs  test_detect.rs  test_for_online_bytecodes.rs  test_generate_bytecode.rs
src/utils/: defect_enum.rs  mod.rs  result_format.rs  utils.rs
tests/: count_dataset_feature_tests.rs  for_test.rs  new_empty_benchmark.rs  test_for_online_bytecodes.rs
tests/ds1/: README.md
tests/ds1/result/: OpenSource_benchmark.json
tests/ds2/: README.md
(+92634 files in other folders)
